--- a/templates/client.html
+++ b/templates/client.html
@@ -10,16 +10,19 @@
 <h1 style="text-align: center; margin: 40px; font-family: 'BHN Cinema'; color: white; font-size: 4vw">Client Work</h1>
 <div class="thumbnail-container">
     <div class="thumbnail">
-        <img src="../static/asset/images/client/olympics.png" alt="CNN Olympics">
-        <div class="thumbnail-content">
-            <a class="thumbnail-header" href="olympics">CNN Olympics</a>
-            <div class="thumbnail-description">
-                Commissioned logos for CNN Hội Thao
+        <a href="olympics">
+
+            <img src="../static/asset/images/client/olympics.png" alt="CNN Olympics">
+            <div class="thumbnail-content">
+                <div class="thumbnail-header">CNN Olympics</div>
+                <div class="thumbnail-description">
+                    Commissioned logos for CNN Hội Thao
+                </div>
+                <div class="thumbnail-description" style="color:#bbb;">
+                    Completed: Nov 2023 - Jan 2024
+                </div>
             </div>
-            <div class="thumbnail-description" style="color:#bbb;">
-                Completed: Nov 2023 - Jan 2024
-            </div>
-        </div>
+        </a>
     </div>
 
     <div class="thumbnail">
