--- a/templates/collab.html
+++ b/templates/collab.html
@@ -11,47 +11,55 @@
 </h1>
 <div class="thumbnail-container">
     <div class="thumbnail">
-        <img src="../static/asset/images/art direction/recit.jpg" alt="Recit" style="height: 300px;">
-        <div class="thumbnail-content">
-            <a class="thumbnail-header" href="recit">Recít Film Studio</a>
-            <div class="thumbnail-description">
-                Hanoi's dynamic studio weaving cinematic tales, captivating hearts with immersive storytelling
-            </div>
-            <div class="thumbnail-description" style="color:#bbb;">
-                Art director
-            </div>
+        <a href="recit">
 
-        </div>
+            <img src="../static/asset/images/art direction/recit.jpg" alt="Recit" style="height: 300px;">
+            <div class="thumbnail-content">
+                <div class="thumbnail-header" href="recit">Recít Film Studio
+                </div>
+                <div class="thumbnail-description">
+                    Hanoi's dynamic studio weaving cinematic tales, captivating hearts with immersive storytelling
+                </div>
+                <div class="thumbnail-description" style="color:#bbb;">
+                    Art director
+                </div>
+            </div>
+        </a>
     </div>
 
     <div class="thumbnail">
-        <img src="../static/asset/images/art direction/ivmun.jpg" alt="CEC" style="height: 300px;">
-        <div class="thumbnail-content">
-            <a class="thumbnail-header" href="https://www.facebook.com/official.ivmun">International Vietnam Model
-                United Nations</a>
-            <div class="thumbnail-description">
-                Biggest Model UN in Vietnam with annual conference participation up to 1000 people of many countries
-                besides Vietnam
+        <a href="https://www.facebook.com/official.ivmun">
+            <img src="../static/asset/images/art direction/ivmun.jpg" alt="CEC" style="height: 300px;">
+            <div class="thumbnail-content">
+                <div class="thumbnail-header">International Vietnam Model
+                    United Nations
+                    <div class="thumbnail-description">
+                        Biggest Model UN in Vietnam with annual conference participation up to 1000 people of many
+                        countries
+                        besides Vietnam
+                    </div>
+                    <div class="thumbnail-description" style="color:#bbb;">
+                        Co-head of Design
+                    </div>
+                </div>
             </div>
-            <div class="thumbnail-description" style="color:#bbb;">
-                Co-head of Design
-            </div>
-
-        </div>
+        </a>
     </div>
 
     <div class="thumbnail">
-        <img src="../static/asset/images/art direction/highlander.jpg" alt="TeddeAh!" style="height: 300px;">
-        <div class="thumbnail-content">
-            <a class="thumbnail-header" href="highlander">CNN English Club - Highlander</a>
-            <div class="thumbnail-description">
-                A short film production team for CEC Oscar - a film event of CNN English Club
+        <a href="highlander">
+            <img src="../static/asset/images/art direction/highlander.jpg" alt="TeddeAh!" style="height: 300px;">
+            <div class="thumbnail-content">
+                <div class="thumbnail-header" href="highlander">CNN English Club - Highlander
+                    <div class="thumbnail-description">
+                        A short film production team for CEC Oscar - a film event of CNN English Club
+                    </div>
+                    <div class="thumbnail-description" style="color:#bbb;">
+                        Director
+                    </div>
+                </div>
             </div>
-            <div class="thumbnail-description" style="color:#bbb;">
-                Director
-            </div>
-
-        </div>
+        </a>
     </div>
 </div>
-{% endblock %}
+    {% endblock %}
