--- a/templates/index.html
+++ b/templates/index.html
@@ -91,6 +91,21 @@
         </a>
     </main>
 
+
+    <main class="below-fold">
+        <a class="project-thumb" href="/am111" >
+            <!-- swap src to any thumbnail you want -->
+            <img class="project-thumb-img"
+                 src="/static/asset/images/ux/chi111.png"
+                 alt="Neural Reconstruction of Handwritten Curves">
+
+            <div class="project-thumb-meta">
+                <div class="project-thumb-title">Neural Reconstruction of Handwritten Curves</div>
+                <div class="project-thumb-sub">Final Project for AM111: Scientific Computing</div>
+            </div>
+        </a>
+    </main>
+
 </body>
 
 </html>
