--- a/static/css/body.css
+++ b/static/css/body.css
@@ -647,3 +647,17 @@
     }
 }
 
+/* Iframe wrapper */
+.iframe-wrapper {
+    width: 100%;
+    max-width: 1000px;      /* desktop limit */
+    margin: auto;
+    aspect-ratio: 22 / 17;   /* keeps proportions */
+  }
+  
+  .iframe-wrapper iframe {
+    width: 100%;
+    height: 100%;
+    border: 0;
+  }
+  
