--- a/templates/am111.html
+++ b/templates/am111.html
@@ -9,9 +9,13 @@
 {% block content %}
 <!--- Subnavigation page for displaying project --->
 <div class="bio-container">
-    <div style="display: flex; justify-content: center; margin: auto; align-items: center; flex-direction: column;">
-        <iframe src="https://drive.google.com/file/d/1AQbjf6Tl89mz_BkEtFMzqODIJShruNFG/view" width="1000vw" height="600vh" allow="autoplay"></iframe>
+    <div class="iframe-wrapper">
+      <iframe
+        src="https://drive.google.com/file/d/1AQbjf6Tl89mz_BkEtFMzqODIJShruNFG/preview"
+        allow="autoplay"
+        loading="lazy">
+      </iframe>
     </div>
-</div>
+  </div>
 
 {% endblock %}
