--- a/templates/am111.html
+++ b/templates/am111.html
@@ -1,8 +1,8 @@
 {% extends "layout.html" %}
 
-{% block title %}| Unicode Data Story{% endblock %}
-
+{% block title %}| Neural Reconstruction of Handwritten Curves{% endblock %}
 {% block extra_css %}
+<link href="/static/css/body.css" rel="stylesheet">
 <link href="/static/css/ux.css" rel="stylesheet">
 {% endblock %}
 
