--- a/templates/index.html
+++ b/templates/index.html
@@ -71,7 +71,7 @@
 
             <div class="project-thumb-meta">
                 <div class="project-thumb-title">T4SG × 2ft Prosthetics</div>
-                <div class="project-thumb-sub">Offline-first inventory system (protected)</div>
+                <div class="project-thumb-sub">Offline-first inventory system</div>
             </div>
         </a>
     </main>
