--- a/static/css/body.css
+++ b/static/css/body.css
@@ -247,7 +247,7 @@
 .bio-container {
     background-repeat: no-repeat;
     background-size: 10rem auto;
-    max-width: 100%;
+    max-width: 100vw;
     margin: 0 auto;
     padding-top: 3rem;
     display: flex;
